examples/test/testpolicy13919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13919
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key16: value49
      key5: value36
      key0: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
          key23: value18
      podSelector:
        matchLabels:
          key35: value48
          key10: value23
